--- a/GamifiedMarketingWEB/WebContent/WEB-INF/InspectionPage.html
+++ b/GamifiedMarketingWEB/WebContent/WEB-INF/InspectionPage.html
@@ -5,50 +5,64 @@
 <title>Inspection page</title>
 </head>
 <body>
-	<table>
-		<thead>
-			<tr>
-				<th>User who submitted</th>
-				<th>Answers</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="u : ${session.userSubmitted}">
+	<div th:if="${not #lists.isEmpty(userSubmitted)}">
+		<table>
+			<thead>
+				<tr>
+					<th>User who submitted</th>
+					<th>Answers</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="u : ${userSubmitted}">
 
-				<td th:text="${u.username}"></td>
-				<td><a th:href="@{/RetrieveAnswers(userid=${u.id})}">Show
-						Answers</a></td>
-			</tr>
-		</tbody>
-	</table>
+					<td th:text="${u.username}"></td>
+					<td><a
+						th:href="@{/InspectQuestionnaire(userid=${u.id}, questionnaireid=${questionnaireid})}">Show
+							Answers</a></td>
+				</tr>
+			</tbody>
+		</table>
 
+	</div>
+
+		<div th:if="${not #lists.isEmpty(userCancelled)}">
+		<table>
+			<thead>
+				<tr>
+					<th>User who cancelled</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="u : ${userCancelled}">
+
+					<td th:text="${u.username}"></td>
+				</tr>
+			</tbody>
+		</table>
+
+	</div>
+	
 	<!-- IF -->
-	<div th:if="${#answers.isEmpty()}">
-		<div>Nothing to show, no answers inspected</div>
+	<div th:if="${not #lists.isEmpty(answers)}">
+		<table>
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Answer</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="r : ${answers}">
+
+					<td th:text="${r.id}"></td>
+					<td th:text="${r.response}"></td>
+
+				</tr>
+			</tbody>
+		</table>
+
 	</div>
-	<!-- ELSE -->
-	<div th:unless="${#answers.isEmpty()}">
-		<div>
-
-			<table>
-				<thead>
-					<tr>
-						<th>Id</th>
-						<th>Answer</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="r : ${session.answers}">
-
-						<td th:text="${r.id}"></td>
-						<td th:text="${r.text}"></td>
-
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
-
 
 
 
